--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <footer class="foot">
       Challenge by &nbsp&nbsp<a class="a1" href="https://www.frontendmentor.io?ref=challenge">Frontend Mentor.</a><br>
-      Coded by &nbsp&nbsp<a class="a2" href="https:/khubaibkm.github.io/simple_html_css/">Khubaib Ahmad.</a>
+      Coded by &nbsp&nbsp<a class="a2" href="https://khubaibkm.github.io/simple_html_css/">Khubaib Ahmad.</a>
     </footer>
   </div>
 
